--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Portfolio Julia de las Muelas Ruiz</title>
-    <link rel="stylesheet" href="Portfolio CSS.css"> 
+    <link rel="stylesheet" href="index.css"> 
 </head>
 <body>
 
