--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <!--Empieza el diseño--> 
 <header>
-  <img src="C:\Users\julia\Downloads\Foto de perfil Julia.jpg" alt="Foto de perfil de Julia de las Muelas Ruiz">
+  <img src="Foto de perfil Julia.jpg" alt="Foto de perfil de Julia de las Muelas Ruiz">
   <div class="nombre">
     <span>Julia de las Muelas Ruiz</span>
       <p>Desarrollo de Aplicaciones & Análisis de Datos</p>
