--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <ul>
     <li><a href="#sobre-mi">Sobre mí</a></li>
     <li><a href="#proyectos">Proyectos</a></li>
-    <li><a href="#contactame">Contáctame</a></li>
+    <li><a href="#contacto">Contáctame</a></li>
   </ul>
 </nav>
 
@@ -76,7 +76,7 @@
 </section>
 
   <!--Sección contacto-->
-<section id="contacto" class="seccion">
+<section id="contactame" class="seccion">
   <h2>Contacto</h2>
   <p>¡Hola! Si quieres ponerte en contacto conmigo, colaborar en algún proyecto o simplemente hablar sobre tecnología y análisis de datos, este es el lugar.  
     Estoy abierta a nuevas oportunidades y siempre con ganas de aprender y seguir creciendo profesionalmente.  
