--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 </section>
 
   <!--Sección contacto-->
-<section id="contactame" class="seccion">
+<section id="contacto" class="seccion">
   <h2>Contacto</h2>
   <p>¡Hola! Si quieres ponerte en contacto conmigo, colaborar en algún proyecto o simplemente hablar sobre tecnología y análisis de datos, este es el lugar.  
     Estoy abierta a nuevas oportunidades y siempre con ganas de aprender y seguir creciendo profesionalmente.  
